--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Bob Clan</title>
+        <title>Bob Clan Tournament</title>
     </head>
     <body>
 For Aiur!
