update hall of fame

--- a/index.html
+++ b/index.html
@@ -5,12 +5,23 @@
     </head>
     <body>
  <img src="img/bean.png" alt="Bohne Cup">
+ <h2>Hall of Fame</h2>
+  <table style="width:100%">
+    <tr>
+      <th>Date</th>
+      <th>Winner</th>
+    </tr>
+    <tr>
+      <td>28.06.20</td>
+      <td>Romanoff</td>
+    </tr>
+  </table>
     </body>
     
 <p id="demo"></p>
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("Jun 28, 2020 20:00:00").getTime();
+var countDownDate = new Date("Jul 5, 2020 20:00:00").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
