--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html>
     <head>
         <title>Bob Clan Tournament</title>
+    <style>
+        table, th, td {
+        border: 1px solid black;
+        border-collapse: collapse;
+        }
+        th, td {
+        padding: 5px;
+        text-align: left;    
+        }
+    </style>
     </head>
     <body>
  <img src="img/bean.png" alt="Bohne Cup">
