--- a/index.html
+++ b/index.html
@@ -25,13 +25,17 @@
       <td>28.06.20</td>
       <td>Romanoff</td>
     </tr>
+    <tr>
+      <td>02.08.20</td>
+      <td>Romanoff</td>
+    </tr>
   </table>
     </body>
     
 <p id="demo"></p>
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("Aug 2, 2020 20:00:00").getTime();
+var countDownDate = new Date("Aug 9, 2020 20:00:00").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
